--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.9.4"
+    "astro": "^5.9.4",
+    "shadcn-ui": "^0.9.5"
   }
 }
